--- a/src/components/Main.module.css
+++ b/src/components/Main.module.css
@@ -1,7 +1,12 @@
 main {
-  height: 100vh;
   width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  height: 100vh;
+}
+
+@media screen and (min-width: 480px) {
+  main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
