--- a/src/components/Display.module.css
+++ b/src/components/Display.module.css
@@ -1,15 +1,16 @@
 .display {
   display: flex;
-  align-items: center;
-  justify-content: flex-end;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: right;
   background-color: darkblue;
   border-radius: 10px;
   padding: 4rem 3.2rem 3.6rem;
-  margin-top: 3.2rem;
 }
 
 .display-output {
   font-size: 5.6rem;
   letter-spacing: -0.93px;
   color: white;
+  margin-top: 1rem;
 }
