--- a/src/components/Display.module.css
+++ b/src/components/Display.module.css
@@ -12,5 +12,15 @@
   font-size: 5.6rem;
   letter-spacing: -0.93px;
   color: white;
-  margin-top: 1rem;
+}
+
+.in-memory {
+  color: white;
+  font-size: 2.5rem;
+}
+
+@media screen and (min-width: 570px) {
+  .display {
+    height: 12.8rem;
+  }
 }
