--- a/src/components/Calculator.module.css
+++ b/src/components/Calculator.module.css
@@ -1,10 +1,10 @@
 .calculator {
   margin: 3rem 2.4rem;
-  max-width: 32.7rem;
+  min-width: 32.7rem;
 }
 
 @media screen and (min-width: 375px) {
   .calculator {
-    max-width: 53.3rem;
+    min-width: 53.3rem;
   }
 }
