--- a/src/components/UI/DigitButton.module.css
+++ b/src/components/UI/DigitButton.module.css
@@ -9,6 +9,9 @@
   cursor: pointer;
   font-size: 3.2rem;
   font-weight: 700;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .span-two {
