--- a/src/components/Calculator.module.css
+++ b/src/components/Calculator.module.css
@@ -3,8 +3,8 @@
   min-width: 32.7rem;
 }
 
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 600px) {
   .calculator {
-    min-width: 53.3rem;
+    max-width: 53.3rem;
   }
 }
