--- a/src/components/Main.module.css
+++ b/src/components/Main.module.css
@@ -1,6 +1,18 @@
-main {
+.main {
   width: 100%;
   height: 100vh;
+}
+
+.main-background-one {
+  background-color: var(--main-background-one);
+}
+
+.main-background-two {
+  background-color: var(--main-background-two);
+}
+
+.main-background-three {
+  background-color: var(--main-background-three);
 }
 
 @media screen and (min-width: 480px) {
