--- a/src/components/Main.module.css
+++ b/src/components/Main.module.css
@@ -16,7 +16,7 @@
 }
 
 @media screen and (min-width: 480px) {
-  main {
+  .main {
     display: flex;
     justify-content: center;
     align-items: center;
