--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -36,8 +36,8 @@ input[type="range"] {
   -webkit-appearance: none;
   height: 2.6rem;
   width: 7.1rem;
-  background: #242d44;
   border-radius: 1.3rem;
+  background-color: #242d44;
   padding: 0.5rem;
 }
 
@@ -46,7 +46,7 @@ input[type="range"]::-webkit-slider-thumb {
   height: 1.6rem;
   width: 1.6rem;
   border-radius: 100%;
-  background-color: blue;
+  background-color: #c85402;
   cursor: pointer;
 }
 
@@ -63,7 +63,6 @@ input[type="range"]::-moz-range-thumb {
   height: 1.6rem;
   width: 1.6rem;
   border-radius: 100%;
-  background-color: blue;
   cursor: pointer;
 }
 
@@ -80,7 +79,6 @@ input[type="range"]::-ms-thumb {
   height: 1.6rem;
   width: 1.6rem;
   border-radius: 100%;
-  background-color: blue;
   cursor: pointer;
 }
 
